<resources>
    <string name="app_name">IPingNet</string>
    <string name="action_settings">Settings</string>
    <string name="action_exit">Exit</string>
    <string name="action_rateus">Rate Us</string>
    <string name="action_share">Share </string>
    <string name="ip6">0:0:0:0:0:0:0:0</string>
    <string name="demo1">0.0.0.0    or example.com</string>
    <string name="demo">0.0.0.0</string>
    <string name="demoZero">0</string>
    <string name="btn_calculate">Calculate</string>
    <string name="classless">Classless</string>
    <string name="classfull">Classfull</string>
    <string name="ip_address">IP Address</string>
    <string name="prefix">Prefix</string>
    <string name="ip_class">IP Class</string>
    <string name="subnet_mask">Subnet Mask</string>
    <string name="net_id">Network Id</string>
    <string name="ist_host">First Host Id</string>
    <string name="last_host">Last Host Id</string>
    <string name="boardcast_id">Boardcast Id</string>
    <string name="wildcard_id">Wildcard Id</string>
    <string name="no_f_subsets">No. of Subsets</string>
    <string name="no_f_host">No. of Hosts</string>
    <string name="ip_type">Subnet Type</string>
    <string name="class_A">Class A</string>
    <string name="class_B">Class B</string>
    <string name="class_C">Class C</string>
    <string name="hint_ip1">1&#8211;127</string>
    <string name="hint_ip2">0&#8211;255</string>
    <string name="hint_ip3">8&#8211;32</string>
    <string name="hint_ip4">255</string>
    <string name="ping">PING</string>
    <string name="wrtAddress">URL: </string>
    <string name="cpu">CPU info</string>
    <string name="more">More Info</string>
    <string name="privateAdd">Private-Use IP  "\n" Not Routable </string>
    <string name="publicAdd">Public Ip Address</string>
    <string name="APIPAAdd">APIPA Address "\n" Automatic Private IP Addressing</string>
    <string name="txtTest">Testing</string>
    <string name="multiAdd">Multicast Address</string>
    <string name="txtNetStat">NetStat</string>
    <string name="txtNeigh">Nearby</string>
    <string name="txtMaddr">MyAddr</string>
    <string name="txtdf">FileSpace</string>
    <string name="txtMac">MAC Address</string>
    <string name="txtError">ERROR: Sorry Its seems your device didn\'t support this command!</string>
</resources>
