<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context="com.mymoona.tufailbhat.ipingnet.ThreeFragment"
    android:background="@color/textTwo">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/txtUrl"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/wrtAddress"
            android:textSize="@dimen/tab_text"
            android:textColor="@color/colorPrimaryDark"/>
        <EditText
            android:id="@+id/edtUrl"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:hint="@string/demo1"
            android:imeOptions="flagNoExtractUi"
            android:inputType="textUri"
            android:textSize="18sp"
            android:background="@drawable/border"
            android:layout_marginBottom="5dp"/>
    </LinearLayout>
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal">
    <Button
        android:id="@+id/bttnPing"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/ping" />
    <Button
        android:id="@+id/bttnCPu"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/cpu" />
       <Button
           android:id="@+id/bttnNetstat"
           style="@style/Widget.AppCompat.Button.Colored"
           android:layout_width="0dp"
           android:layout_weight="1"
           android:layout_height="wrap_content"
           android:text="@string/txtNetStat"/>

   </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/bttnTesting"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/txtTest" />
        <Button
            android:id="@+id/bttnNeigh"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/txtNeigh" />
        <Button
            android:id="@+id/bttnMaddr"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/txtMaddr"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/bttnDF"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/txtdf" />
        <Button
            android:id="@+id/bttnMac"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/txtMac" />
    </LinearLayout>
    <View
        android:id="@+id/viewline"
        android:background="@color/colorPrimary"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="2dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="vertical">
        <TextView
            android:id="@+id/txtUrlResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/textTwo"
            android:textColor="@color/textColorPrimary"
            android:text="@string/app_name"/>
    </LinearLayout>
    <TextView
        android:id="@+id/txtInfoRes"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="70dp"
        android:textColor="@color/textD"
        android:textSize="@dimen/tab_text"/>
    </LinearLayout>
</ScrollView>
