<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:padding="16dp"
    tools:context="com.mymoona.tufailbhat.ipingnet.OneFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ip_address"
        android:textStyle="bold"
        android:textColor="@color/textOne"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/edtIpAddress1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLength="3"
            android:inputType="number|none"
            android:imeOptions="flagNoExtractUi"
            android:hint="@string/hint_ip1"/>
        <EditText
            android:id="@+id/edtIpAddress2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLength="3"
            android:inputType="number|none"
            android:imeOptions="flagNoExtractUi"
            android:hint="@string/hint_ip2"/>
        <EditText
            android:id="@+id/edtIpAddress3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLength="3"
            android:inputType="number|none"
            android:imeOptions="flagNoExtractUi"
            android:hint="@string/hint_ip2"/>
        <EditText
            android:id="@+id/edtIpAddress4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLength="3"
            android:inputType="number|none"
            android:imeOptions="flagNoExtractUi"
            android:hint="@string/hint_ip2"/>
    </LinearLayout>

    <RadioGroup
        android:id="@+id/rdPreMask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/rdSubnet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subnet_mask"
            android:textColor="@color/navigationBarColor"
            android:checked="true"/>
        <RadioButton
            android:id="@+id/rdPrefix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prefix"
            android:textColor="@color/navigationBarColor"/>
    </RadioGroup>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/edtPrefix"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:maxLength="2"
            android:inputType="number|none"
            android:imeOptions="flagNoExtractUi"/>
        <EditText
            android:id="@+id/edtPrefix2"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:maxLength="2"
            android:inputType="number|none"
            android:imeOptions="flagNoExtractUi"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/edtSubnet1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLength="3"
            android:inputType="number|none"
            android:enabled="false"
            android:text="@string/hint_ip4"
            android:imeOptions="flagNoExtractUi"/>
        <EditText
            android:id="@+id/edtSubnet2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLength="3"
            android:inputType="number|none"
            android:imeOptions="flagNoExtractUi"/>
        <EditText
            android:id="@+id/edtSubnet3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLength="3"
            android:inputType="number|none"
            android:imeOptions="flagNoExtractUi"/>
        <EditText
            android:id="@+id/edtSubnet4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLength="3"
            android:inputType="number|none"
            android:imeOptions="flagNoExtractUi"/>
    </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ip_type"
            android:textStyle="bold"
            android:textColor="@color/textOne"/>
        <RadioGroup
        android:id="@+id/rdSubType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/typeClassfull"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/classfull"
            android:textColor="@color/navigationBarColor"
            android:checked="true"/>
        <RadioButton
            android:id="@+id/typeClassless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/classless"
            android:textColor="@color/navigationBarColor"/>
    </RadioGroup>
        <RadioGroup
            android:id="@+id/rdClasses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/rbClassA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/class_A"
                android:textColor="@color/navigationBarColor"
                android:checked="true"/>
            <RadioButton
                android:id="@+id/rbClassB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/class_B"
                android:textColor="@color/navigationBarColor"/>
            <RadioButton
                android:id="@+id/rbClassC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/class_C"
                android:textColor="@color/navigationBarColor"/>
        </RadioGroup>

    <Button
        android:id="@+id/bttnCalculate"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_calculate" />
    <View
        android:id="@+id/viewline"
        android:background="@color/colorPrimary"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="2dp"/>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/txtIP"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/ip_address"
            android:layout_margin="5dp"
            android:textColor="@color/textOne"
            android:textSize="@dimen/tab_text"/>
        <TextView
            android:id="@+id/txtResIP"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/demo"
            android:layout_margin="5dp"
            android:textColor="@color/textD"
            android:textSize="@dimen/tab_text"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/txtPrefix"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/prefix"
            android:layout_margin="5dp"
            android:textColor="@color/textOne"
            android:textSize="@dimen/tab_text"/>
        <TextView
            android:id="@+id/txtPrefixRes"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/demoZero"
            android:layout_margin="5dp"
            android:textColor="@color/textTwo"
            android:textSize="@dimen/tab_text"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        android:id="@+id/txtClass"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/ip_class"
        android:layout_margin="5dp"
        android:textColor="@color/textOne"
        android:textSize="@dimen/tab_text"/>
    <TextView
        android:id="@+id/txtClassRes"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/demoZero"
        android:layout_margin="5dp"
        android:textColor="@color/textTwo"
        android:textSize="@dimen/tab_text"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        android:id="@+id/txtSubnetmask"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/subnet_mask"
        android:layout_margin="5dp"
        android:textColor="@color/textOne"
        android:textSize="@dimen/tab_text"/>
    <TextView
        android:id="@+id/txtSubnetmaskRes"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/demo"
        android:layout_margin="5dp"
        android:textColor="@color/textTwo"
        android:textSize="@dimen/tab_text"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        android:id="@+id/txtNetid"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/net_id"
        android:layout_margin="5dp"
        android:textColor="@color/textOne"
        android:textSize="@dimen/tab_text"/>
    <TextView
        android:id="@+id/txtNetidRes"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/demo"
        android:layout_margin="5dp"
        android:textColor="@color/textTwo"
        android:textSize="@dimen/tab_text"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        android:id="@+id/txtIstHost"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/ist_host"
        android:layout_margin="5dp"
        android:textColor="@color/textOne"
        android:textSize="@dimen/tab_text"/>
    <TextView
        android:id="@+id/txtIstHostRes"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/demo"
        android:layout_margin="5dp"
        android:textColor="@color/textTwo"
        android:textSize="@dimen/tab_text"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        android:id="@+id/txtLastHostid"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/last_host"
        android:layout_margin="5dp"
        android:textColor="@color/textOne"
        android:textSize="@dimen/tab_text"/>
    <TextView
        android:id="@+id/txtLastHostidRes"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/demo"
        android:layout_margin="5dp"
        android:textColor="@color/textTwo"
        android:textSize="@dimen/tab_text"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        android:id="@+id/txtBroadcastid"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/boardcast_id"
        android:layout_margin="5dp"
        android:textColor="@color/textOne"
        android:textSize="@dimen/tab_text"/>
    <TextView
        android:id="@+id/txtBroadcastidRes"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/demo"
        android:layout_margin="5dp"
        android:textColor="@color/textTwo"
        android:textSize="@dimen/tab_text"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        android:id="@+id/txtWildcard_id"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/wildcard_id"
        android:layout_margin="5dp"
        android:textColor="@color/textOne"
        android:textSize="@dimen/tab_text"/>
    <TextView
        android:id="@+id/txtWildcardidRes"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/demo"
        android:layout_margin="5dp"
        android:textColor="@color/textTwo"
        android:textSize="@dimen/tab_text"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/txtNoSubnets"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/no_f_subsets"
            android:layout_margin="5dp"
            android:textColor="@color/textOne"
            android:textSize="@dimen/tab_text"/>
        <TextView
            android:id="@+id/txtNoSubnetsRes"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/demoZero"
            android:layout_margin="5dp"
            android:textColor="@color/textTwo"
            android:textSize="@dimen/tab_text"/>
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/noHosts"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/no_f_host"
                android:layout_margin="5dp"
                android:textColor="@color/textOne"
                android:textSize="@dimen/tab_text"/>
            <TextView
                android:id="@+id/noofHostsRes"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/demoZero"
                android:layout_margin="5dp"
                android:textColor="@color/textTwo"
                android:textSize="@dimen/tab_text"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/txtInfo"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/more"
                android:layout_margin="5dp"
                android:textColor="@color/textD"
                android:textSize="@dimen/tab_text"/>
            <TextView
                android:id="@+id/txtInfoRes"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/demoZero"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="60dp"
                android:textColor="@color/textD"
                android:textSize="@dimen/tab_text"/>
        </LinearLayout>
    </LinearLayout>

</ScrollView>
