<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mymoona.tufailbhat.ipingnet.TwoFragment">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/ip_address"
        android:textColor="@color/textOne"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtIpAdd6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/border"
        android:textStyle="bold"
        android:imeOptions="flagNoExtractUi"
        android:hint="@string/ip6"
        android:maxLength="39"/>
    <TextView
        android:id="@+id/txtpfix"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/prefix"
        android:textColor="@color/textOne"
        android:textStyle="bold"
        android:layout_marginTop="5dp"/>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <EditText
        android:id="@+id/prefval"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_margin="6dp"
        android:background="@drawable/border"
        android:textStyle="bold"
        android:inputType="number|none"
        android:maxLength="3"
        android:imeOptions="flagNoExtractUi"/>

    <EditText
        android:id="@+id/dummy"
        android:visibility="invisible"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:layout_margin="6dp"
        android:background="@color/windowBackground"
        android:textStyle="bold"
        android:inputType="number|none"
        android:maxLength="3"
        android:imeOptions="flagNoExtractUi"/>
</LinearLayout>
    <Button
        android:id="@+id/bttnCalIP6"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_calculate"/>
    <View
        android:id="@+id/viewline"
        android:background="@color/colorPrimary"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="2dp"/>
    <TextView
        android:id="@+id/txtresIPV6"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="6dp"
        android:text="@string/app_name"
        android:textColor="@color/textOne"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/txtInfoRes"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="70dp" />
  </LinearLayout>
</ScrollView>
